test-add-labels/test-cases/resource-c-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: Pod
metadata:
  name: pod-resource
  namespace: team-4
  labels:
    any-label0: foo
    any-label1: bar
