test-add-labels/test-cases/policies-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: lfx-add-labels   
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
