test-add-labels/test-cases/policies.yaml
apiVersion: kuttl.dev/v1beta1
kind: ClusterPolicy
metadata:
  name: lfx-add-labels       
spec:
  rules:
  - name: lfx-mentorship     
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
          namespaces:
            - "team-*"
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            +(lfx-mentorship): kyverno
